--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+chrono = "0.4.35"
 clap = { version = "4.4.18", features = ["derive"] }
 log = "0.4.21"
 pretty_env_logger = "0.5.0"
